--- a/02 正则表达式与模式匹配.md
+++ b/02 正则表达式与模式匹配.md
@@ -1,6 +1,6 @@
-> 正则表达式基本概念
+> # 正则表达式基本概念
 
-(1) 什么式正则表达式
+## (1) 什么式正则表达式
 
    正则表达式是 **对字符串操作的一种逻辑公式** ，就是用事先定义好的一些特定字符、及这些特定字符的组合，组成一个“规则字符串”，
     
@@ -10,7 +10,7 @@
 
     常用的工具有grep, sed, awk 等
 
-(2) 正则表达式处理顺序：
+## (2) 正则表达式处理顺序：
     
     a) 以行为处理单位
 
@@ -20,7 +20,7 @@
 
     d) 默认输出与表达式匹配的行
 
-(3) 正则表达式的组成部分
+## (3) 正则表达式按组成划分
 
     正则表达式一般由三部分组成
     
@@ -64,23 +64,110 @@
 
 ![image](https://user-images.githubusercontent.com/42632290/160265966-a514f5b4-dc14-47b6-9ff2-e886433b0ec3.png)
 
-参考：https://www.cnblogs.com/hb91/p/9969307.html
+
+## (4) 正则表达式按发展分类
+
+    正则表达式最早在 1950 年代由美国数学家 Stephen Cole Kleene 提出，后来被 Unix 操作系统的文本处理工具广泛使用。
+
+    经过多年的发展和实践，最终形成两大标准，一个是 POSIX 标准，另一个是 Perl 标准。后者本是为 Perl 语言实现的，由于其功能非常强大，被 Java、JavaScript 等语言广泛借鉴，从而被广泛使用。
+
+    我们这里将正则表达式分为三类：
+
+    a) 基本正则表达式（Basic Regular Expression 简称 BRE），由 POSIX 标准定义。
+    
+    b) 扩展正则表达式（Extended Regular Expression 简称 ERE），也由 POSIX 标准定义。
+    
+    c) Perl 的正则表达式（Perl Regular Expression 简称 PRE），由 Perl 语言定义。
+
+  1) 基本组成部分  
+
+     下列展示了正则表达式的基本组成部分  
+
+![image](https://user-images.githubusercontent.com/42632290/160266125-93e4fc22-b3ce-4953-9988-20cb52b83de9.png)
+
+    修正：ma(tri)x?   匹配max或maxtrix
+
+  2) POSIX 字符类
+
+     POSIX字符类是一个形如[:...:]的特殊元序列（meta sequence），他可以用于匹配特定的字符范围
+
+![image](https://user-images.githubusercontent.com/42632290/160266213-4ca98827-a17e-4720-a47b-a6dd45d8c953.png)
+
+  3) 元字符类
+
+     元字符（meta character）是一种 Perl 风格的正则表达式，只有一部分文本处理工具支持它，并不是所有的文本处理工具都支持
+
+![image](https://user-images.githubusercontent.com/42632290/160266254-dae8b458-e02d-44bf-91fc-a51dc05f587c.png)
 
 
+## (5) 常见命令中的使用
 
-> 语法规则
+![image](https://user-images.githubusercontent.com/42632290/160266292-33b5de7e-d489-4752-9c3e-9a5296bafc4f.png)
 
+参考：
 
+    (1) https://www.cnblogs.com/hb91/p/9969307.html
 
+    (2) https://www.cnblogs.com/everfind/p/shell-regexp.html
+    
+> # 语法规则
 
+    1) grep [选项]  ‘正则表达式’ 文件列表
+    
+    2) 前置命令  | grep [选项]  ‘正则表达式’
 
+```
+示例1：
+    grep ^root /etc/passwd           # 匹配以root开头的行
+    root:x:0:0:root:/root:/bin/bash
+```
+> # 练习
 
-参考：https://www.cnblogs.com/everfind/p/shell-regexp.html
+```
+示例1：
 
+匹配MAC地址
+    1）MAC地址由12个16进制的字母组成
+    2）16个字母是 0~9、a~f 。不区分大小写，一般为大写
+    3）每两个字母为一组，共六组，每组间用冒号:隔开
+    
+匹配思路：
+    00:0C:29:88:83:1A
+    1）先匹配前两个字母；用元字符[] 匹配单个字符，用{2}匹配2次
+    2）接着匹配冒号和两个字母；后面的跟这个匹配方式相同,用{5}匹配5次
 
-> 练习
+[root@moni01 tmp]# egrep '[0-9a-fA-F]{2}(:[0-9a-fA-F]{2}){5}' /etc/sysconfig/network-scripts/ifcfg-eth0   --color
+HWADDR=00:0C:29:E3:5F:39
 
+如果要仅输出MAC地址，那就要用awk工具切割
+方法：以等号为分隔符，取第二个
 
+[root@moni01 tmp]# egrep '[0-9a-fA-F]{2}(:[0-9a-fA-F]{2}){5}' /etc/sysconfig/network-scripts/ifcfg-eth0   | awk -F "=" '{print $2}'
+00:0C:29:E3:5F:39
 
+示例2：
 
+匹配邮箱地址
+    1）邮箱完整地址由用户名@域名组成
+    2）用户名最少三个字符，由字母、数字、下划线组成，字母不区分大小写
+    3）域名应至少有一个 . 分隔，分隔的各部分至少2个字符，可能由字母、数字组成
 
+匹配思路：
+    1）用户名在这范围内[0-Z_]，所有数字字母下划线，最少匹配三次
+    2）域名小点 .前面的字母至少2次，小点后的字母包括小点至少匹配一次。小点需要转义，不然会匹配任何单个字符
+
+[root@moni01 tmp]# echo -e "123456789@qq.com \n hlf@163.com" | egrep '[0-Z_]{3,}@[0-Z]{2,}(\.[0-Z]{2,})+'
+123456789@qq.com
+hlf@163.com
+
+示例3：
+
+匹配IP地址
+
+    1）IP地址是一个32位的二进制数，通常被分割为4个“8位 二进制数”
+    2）IP地址通常用“点分十进制”表示成（a.b.c.d）的形式，其中，a,b,c,d都是0~255之间的十进制整数
+
+[root@moni01 tmp]# ifconfig | egrep '[0-9]{1,3}(\.[0-9]{1,3}){3}'
+          inet addr:192.168.10.253  Bcast:192.168.10.255  Mask:255.255.255.0
+          inet addr:127.0.0.1  Mask:255.0.0.0
+```
