--- a/04 文本三剑客.md
+++ b/04 文本三剑客.md
@@ -1,15 +1,108 @@
-> # 文本三剑客之grep
+> linux 文本处理工具
+
+     Linux 三剑客：grep、awk 和 sed 就是 Linux 文本处理问题的最高效工具。
+
+   (1) 简介
+   
+       grep: 
+       
+           global search regular expression(RE) and print out the line
+       
+           基于正则表达式查找满足条件的行
+           
+      awk:
+       
+          名字来源于三个作者名字的简称
+          
+          根据定位到的数据行处理其中的分段
+       
+      sed:
+       
+          stream editor
+          
+          根据定位到的数据行修改数据
+
+   (2) 用途
+   
+       grep: 数据搜索与定位  
+       
+       awk:  数据切片
+       
+       sed: 数据修改
+   
+> 文本三剑客之grep
+
+(1) grep 简介
+
+   grep是一种强大的**文本搜索工具**，它能使用特定模式匹配（包括正则表达式）搜索文本，并输出匹配行。
+
+   grep家族包括：grep、egrep和fgrep。egrep和fgrep都是grep的扩展。
+
+   egrep 支持扩展的正则表达式实现类似于grep文本过滤功能，等同于grep -E；
+
+   fgrep 命令是用来查找 **一个或多个** 与给出的字符串或词组相匹配文件中的行。fgrep 查询速度比grep命令快，但是不够灵活：它只能找固定的文本，而不是规则表达式，等同于grep -F
+
+(2) 语法与参数
+
+```
+语法格式：
+    grep [选项] [模式] [文件或目录]
+
+选项：
+-a 或 --text : 不要忽略二进制的数据。
+-A<行数> 或 --after-context=<显示行数> : 除了显示符合范本样式的那一行之外，并显示该行之后的内容。
+-b 或 --byte-offset : 在显示符合样式的那一行之前，标示出该行第一个字符的编号。
+-B<行数> 或 --before-context=<显示行数> : 除了显示符合样式的那一行之外，并显示该行之前的内容。
+-c 或 --count : 不显示结果，只统计符合条件的个数。
+-C<行数> 或 --context=<显示行数>或-<显示行数> : 除了显示符合样式的那一行之外，并显示该行前后的内容。
+-d <动作> 或 --directories=<动作> : 当指定要查找的是目录而非文件时，必须使用这项参数，否则grep指令将回报信息并停止动作。
+-e<范本样式> 或 --regexp=<范本样式> : 支持基础正则表达式
+-E 或 --extended-regexp : 支持扩展的正则表达式
+-f<规则文件> 或 --file=<规则文件> : 指定规则文件，其内容含有一个或多个规则样式，让grep查找符合规则条件的文件内容，格式为每行一个规则样式。
+-F 或 --fixed-regexp : 将样式视为固定字符串的列表。
+-G 或 --basic-regexp : 将样式视为普通的表示法来使用。
+-h 或 --no-filename : 在显示符合样式的那一行之前，不标示该行所属的文件名称。
+-H 或 --with-filename : 在显示符合样式的那一行之前，表示该行所属的文件名称。
+-i 或 --ignore-case : 忽略字符大小写的差别。
+-l 或 --file-with-matches : 列出文件内容符合指定的样式的文件名称。
+-L 或 --files-without-match : 列出文件内容不符合指定的样式的文件名称。
+-n 或 --line-number : 输出行号
+-o 或 --only-matching : 只显示匹配PATTERN 部分。
+-q 或 --quiet或--silent : 不显示任何信息。
+-r 或 --recursive : 此参数的效果和指定"-d recurse"参数相同，递归查询。
+-s 或 --no-messages : 不显示错误信息。
+-v 或 --revert-match : 显示不包含匹配文本的所有行。
+-V 或 --version : 显示版本信息。
+-w 或 --word-regexp : 只显示全字符合的列。
+-x --line-regexp : 只显示全列符合的列。
+-y : 此参数的效果和指定"-i"参数相同。
+
+示例：
+(1) grep -rn    #递归查询
+
+ubuntu@ubuntu:~/study/shellscript$ grep -rn hello  #搜索hello
+shell1_helloword:3:echo "hello"
+
+(2) grep -E "" #模式匹配
+
+ubuntu@ubuntu:~/study/shellscript$ grep -rnE "^\#\!/bin"  #搜索以#!/bin开头的内容
+shell6_caulate:1:#!/bin/bash
+shell7_control:1:#!/bin/bash
+shell9_operate:1:#!/bin/bash
+
+(3) 查找MAC地址
+
+ubuntu@ubuntu:~/study/shellscript$ ifconfig | grep -E "[0-Z]{,2}(\:[0-Z][0-Z]){5}"
+ens33     Link encap:Ethernet  HWaddr 00:0c:29:d5:65:bc  
+```
+
+> 文本三剑客之sed
+   
 
 
 
 
 
-> # 文本三剑客之sed
 
-
-
-
-
-
-> # 文本三剑客之awk
+> 文本三剑客之awk
 
