--- a/04 文本三剑客.md
+++ b/04 文本三剑客.md
@@ -98,11 +98,306 @@ ens33     Link encap:Ethernet  HWaddr 00:0c:29:d5:65:bc
 
 > 文本三剑客之sed
    
+(1) sed 简介
 
+   sed是一种流编辑的文本处理工具，为一种非交互式编辑器，使用预先**设定好的编辑指令**对输入的文本进行编辑，完成之后输出编辑结果
+       
+   工作模式：将当前处理的**行**存储在临时缓冲区（模式空间），对缓冲区中的内容利用制定的动作进行处理，完成后输出到屏幕，接着反复重复执行此操作完成整改文件的处理。
 
+   适应场景：大文件，有规律的文本
 
+(2) 语法与参数
 
+```
+语法规则：
+   sed [option] 'Addresscommand' [file]
 
+option:
+   -e<script>或--expression=<script> : 以选项中指定的script来处理输入的文本文件
+   -f<script文件>或--file=<script文件> : 以选项中指定的script文件来处理输入的文本文件
+   -n或--quiet或--silent : 仅显示处理后的结果, 不再默认显示模式空间中的内容, 常与p连用
+   -r（ruguler）: 使用使用扩展正则表达式，默认sed只识别基本正则表达式
+   -i（inside） : 直接修改文件内容，而不是输出到终端
+                  如果不使用-i选项sed软件只是修改在内存中的数据，并不会影响磁盘上的文件
+
+地址定界:
+   1) startline,endline      # 从第几行到第几行
+   2) /regular expression/   # 使用正则表达式
+   3) /pattern1/,/pattern2/  # 第一次被pattern1匹配到的行开始，直到被pattern2匹配到的行结束
+   4) linenumber             # 指定行号
+   5) startline,+n           # 从startline开始，向后n行结束
+   6) startline~step         # step步长，每隔step步
+
+命令操作:
+   a[append] : 新增，a\string: 在制定或匹配到的行的下一行追加，内容为string
+   i[insert] ：插入，i\string，而这些字串会在新的一行出现(目前的上一行)；  
+   d[delete] : 删除, 删除符合条件的行
+   c[change] ：取代，c 的后面可以接字串，这些字串可以取代 n1,n2 之间的行！
+   s ：替换，s/pattern/string/修饰符,查找并替换，默认只替换每行中第一次被模式匹配到的字符串
+   p[print] : 显示,符合条件的行
+   w ：把符合的行写入到指定文件中
+   r ：整合不同的文件到一个文件
+
+修饰符：
+   g: 全局替换
+   i: 忽略字符大小写
+   !: 对指定行以外所有行应用命令
+   
+匹配字符：
+   ^ 匹配行开始，如：/^sed/匹配所有以sed开头的行。
+   $ 匹配行结束，如：/sed$/匹配所有以sed结尾的行。
+   . 匹配一个非换行符的任意字符，如：/s.d/匹配s后接一个任意字符，最后是d。
+   * 匹配0个或多个字符，如：/*sed/匹配所有模板是一个或多个空格后紧跟sed的行。
+   [] 匹配一个指定范围内的字符，如/[ss]ed/匹配sed和Sed。
+   [^] 匹配一个不在指定范围内的字符，如：/[^A-RT-Z]ed/匹配不包含A-R和T-Z的一个字母开头，紧跟ed的行。
+   \(..\) 匹配子串，保存匹配的字符，如s/\(love\)able/\1rs，loveable被替换成lovers。
+   & 保存搜索字符用来替换其他字符，如s/love/**&**/，love这成**love**。
+   \< 匹配单词的开始，如:/\<love/匹配包含以love开头的单词的行。
+   \> 匹配单词的结束，如/love\>/匹配包含以love结尾的单词的行。
+   x\{m\} 重复字符x，m次，如：/0\{5\}/匹配包含5个0的行。
+   x\{m,\} 重复字符x，至少m次，如：/0\{5,\}/匹配至少有5个0的行。
+   x\{m,n\} 重复字符x，至少m次，不多于n次，如：/0\{5,10\}/匹配5~10个0的行。
+
+示例：
+(1) 添加
+sed '$a hello world' fstab		##在最后一行后添加字符串
+sed '$a hello\nworld' fstab		##在最后一行后添加字符串，使用换行符隔开
+sed '/^#/a hello world' fstab	     ##在以#开头的行后添加字符串
+
+(2) 删除
+sed 5d westos 			##删除第5行
+sed '/^#/d' fstab 		##把以#开头的行删除
+sed '/^UUID/!d' fstab 	##删除不是以UUID开头的所有行
+sed  '5,$d' westos		##删除第5行到最后一行
+
+(3) 替换
+sed '/^#/c hello world' fstab	     ##将所有以#开头的行替换为指定字符串
+sed '5chello world' westos		##将第5行替换为指定字符串
+sed 's/is/ese/g' test               ##将is全部替换为ese
+
+(4) 显示
+sed -n 5p westos 		##显示第5行
+sed -n 3,5p westos 		##显示第3行到第5行
+sed -n "3p;5p" westos 	##显示第3行和第5行
+sed -n 1,5p westos 	     ##显示1-5行
+sed -n '5,$p' westos 	##显示第5行到最后一行
+sed -n '/^#/p' fstab 	##显示以#开头的行
+
+(5) 写入分文件与整合文件
+sed '/^#/w newfile' file  ##将以#开头的行都写入指定的newfile中
+sed '$r oldfile' newfile  ##将oldfile中的内容都整合如newfile的中,从最后一行开始放
+
+```
 
 > 文本三剑客之awk
 
+(1) awk 简介
+
+   awk不仅仅时linux系统中的一个命令，而且是一种编程语言，可以用来处理数据和生成报告（excel）。
+    
+   处理的数据可以是一个或多个文件，可以是来自标准输入，也可以通过管道符获取标准输入，awk可以在命令行上直接编辑命令进行操作，也可以编写成awk程序来进行更为复杂的运用。三剑客老大！
+
+(2) 语法与规则
+
+```
+1) 基本结构
+    awk [option] 'script'           filename
+    awk [option] 'pattern {action}' filename
+    命令 +选项 +  找谁 +  干啥  +  文件名
+    
+option:
+-F fs or --field-separator : fs指定输入文件折分隔符，fs是一个字符串或者是一个正则表达式，如-F:【不指定默认以空格为分隔符】
+-v var=value or --asign var=value : 赋值一个用户定义变量。
+-f scripfile or --file scriptfile : 从脚本文件中读取awk命令。
+-W lint or --lint : 打印不能向传统unix平台移植的结构的警告。
+-W lint-old or --lint-old : 打印关于不能向传统unix平台移植的结构的警告。
+-W re-interval or --re-inerval : 允许间隔正则表达式的使用，参考(grep中的Posix字符类)，如括号表达式[[:alpha:]]。
+
+pattern:
+   empty: 空模式，匹配每一行
+   /regular expression/: 仅处理能被此处模式匹配到的行
+   relational expression：关系表达式，结果为“真”有“假”，结果为“真”才会被处理[真：结果为非0值，非空字符串],注意：使用模式需要使用双斜线括起来
+
+常用action:
+   Expression
+   Control statements：if/while
+   Compound statements
+   input statements
+   output statements
+
+2) 程序结构-完整结构
+    awk BEGIN{coms}  /pattern/{coms}  END{coms}
+    命令 +开始模块  +  找谁干啥   +   结束模块
+    
+   语法：
+       BEGIN{awk-commands}
+          开始块就是awk程序启动时执行的代码部分（在处理输入流之前执行）,并且在整个过程中只执行一次；一般情况下，我们在开始块中初始化一些变量。
+          BEGIN是awk的关键字，因此必须要大写。【注：开始块部分是可选，即你的awk程序可以没有开始块部分】
+          
+       /pattern/{awk-commands}
+          针对每一个输入的行都会执行一次主体部分的命令，默认情况下，对于输入的每一行，awk都会执行主体部分的命令，但是我可以使用/pattern/限制其在指定模式下。
+          
+       END{awk-commands}
+          结束块是awk程序结束时执行的代码（在处理完输入流之后执行），END也是awk的关键字，必须大写，与开始块类似，结束块也是可选的。
+```
+
+(3) awk处理过程
+
+   1) 读取文本第一行，首先会和匹配模式进行相匹配，如果发现第一行内容不和模式相匹配的话，就继续读取下一行
+   2) 读取到第二行发现和模式相匹配，就会执行花括号里面的动作
+   3) 然后继续读取下一行，发现和模式相匹配，就会执行花括号里面的动作
+   4) 依次读取全文
+
+(4) awk基本概念及内置匹配变量
+
+   1) 基本概念
+
+![image](https://user-images.githubusercontent.com/42632290/160277301-f88d1863-4c53-4124-af85-74e0e71dac4b.png)
+
+   2) 内置变量
+  
+![image](https://user-images.githubusercontent.com/42632290/160277365-2619beb3-3147-4960-8e5b-747224270d68.png)
+
+```
+awk内置变量之记录变量：
+    FS:field separator，输入字段分隔符（默认空白）等价于命令行 -F选项
+    OFS:output field separator，输出字段分隔符
+    RS:Record separator:输入文本换行符（默认回车）
+    ORS:输出文本换行符
+    
+awk内置变量之数据变量:
+    NR: the number of input records,awk命令所处理的文件的行数，如果有多个文件，这个数目会将处理的多个文件计数
+    FNR: 浏览文件的记录数
+    NF: number of field,当前记录的field个数
+    ARGV: 数组，保存命令行本身这个字符串
+    ARGC：awk命令的参数个数
+    FILENAME: awk命令处理的文件名称
+    ENVIRON：支持队列中系统环境变量的使用
+
+自定义变量: -v var=value
+    awk -v test="abc" 'BEGIN{print test}'
+```
+
+   3) 运算符
+
+![image](https://user-images.githubusercontent.com/42632290/160277382-594ed4d2-6e28-4def-81c7-5875221da1a9.png)
+
+   4) 基础正则与扩展正则
+   
+   基础正则
+
+![image](https://user-images.githubusercontent.com/42632290/160277398-1cc76e3d-b332-42e2-84ca-8caeee80976b.png)
+
+   扩展正则
+
+![image](https://user-images.githubusercontent.com/42632290/160277418-6d3893ee-1bb4-4402-a370-b0d2397deb86.png)
+
+(5) action-控制语句
+
+   1) if
+
+```
+语法：
+    if(condition) {statements}
+    if(condition) {statements} else {statments}
+    
+示例：
+awk -F: '{if($3>100) print $1,$3}' /etc/passwd
+awk -F: '{if($3>100) {printf "Common user:%-15s\n",$1} else {printf "sysadmin user:%-15s\n",$1}}' /etc/passwd
+```
+
+   2) while
+
+```
+语法：
+   while(conditon) {statments}  ## 条件为“真”，进入循环，条件为“假”，退出循环
+  
+使用场景：
+   对一行内的多个字段逐一类似处理时使用，对数组内的各元素逐一进行处理时使用
+
+示例：
+awk '/^[[:space:]]*if/{i=1;while(i<=NF) {print $i,length($i);i++}}' /etc/init.d/functions
+awk '/^[[:space:]]*if/{i=1;while(i<NF) {if(length($i)>7) {print $i,length($i)};i++}}' /etc/init.d/functions
+
+```
+
+   3) do {statements} while(condition)
+
+      意义：至少执行一次循环体
+
+   4) for(expr1;expr2;expr3) {statements}
+
+```
+语法：
+    for(variable assignment;condition;iteration process) {for-body}
+    
+特殊用法：
+    能够遍历数组中的元素，for (var in array) {for-body}
+
+示例：
+awk '/^[[:space:]]*if/{for(i=1;i<NF;i++) {print $i,length($i)}}' /etc/init.d/functions
+awk '/^[[:space:]]*if/{for(i=1;i<NF;i++) {if(length($i)>7) print $i,length($i)}}' /etc/init.d/functions
+```
+
+   5) switch
+
+```
+语法：
+    switch(expression) {case VALUE1 or /REGEXP/: statement; case VALUE2 VALUE2 or /EXGEXP2/: statement;…;default: statement}
+
+```
+
+   6) 其他
+
+```
+break
+continue
+delete array[index]
+```
+
+(6) 数组array
+
+   1) 数组定义
+```
+关联数组：
+    array[index-expression]
+
+index-pression:
+              任意字符串
+              如果数组元素事先不存在，引用时候，awk自动创建此元素，并将其值初始化为空串，若要判断数组中是否存在某元素，需要使用index in array格式进行判断
+示例：
+    awk 'BEGIN{weekdays["mon"]="Monday";weekdays["tue"]="Tuesday";print weekdays["tue"]}'
+```
+   2) 数组遍历
+
+```
+遍历数组使用for循环:
+    for(var in array) {do-body}
+
+示例：
+    awk 'BEGIN{weekdays["mon"]="Monday";weekdays["tue"]="Tuesday";for(i in weekdays) print weekdays[i]}'
+    
+注意：var会遍历array的每个索引
+```
+
+(7) 内置函数
+
+    1)数值处理: rand(): 返回0和1之间的一个随机数
+
+       awk 'BEGIN{print rand()}'
+
+    2) 字符串处理: length([s]): 返回制定字符串的长度
+                    sub(r,s,[t]): 以r表示的模式来查找t所表示的字符串中匹配到的内容，并将其第一次出现替换为s所表示的内容
+
+(8) 练习
+
+```
+1) 统计/etc/fstab每个文件系统类型出现的次数
+    awk '!/^#/&&!/^$/{dev[$3]++}END{for(i in dev) print i,dev[i]}' /etc/fstab
+
+2) ping一个域名，输出ping此刻的时间
+    ping baidu.com|awk '{print $0" "strftime("%Y-%m-%d %H:%M:%S")}'
+
+3) 利用netstat监控服务是否正常监听
+    netstat -lntup|awk 'NR>2{if($4 ~/.*:22/) print $0"yes";exit 0}'
+```
