--- a/04 文本三剑客.md
+++ b/04 文本三剑客.md
@@ -389,7 +389,52 @@ index-pression:
     2) 字符串处理: length([s]): 返回制定字符串的长度
                     sub(r,s,[t]): 以r表示的模式来查找t所表示的字符串中匹配到的内容，并将其第一次出现替换为s所表示的内容
 
-(8) 练习
+(8) 打印输出
+
+    1) print
+
+```
+使用格式：
+         print item1,item2...
+         
+要点: 
+     1.各字段之间逗号隔开，输出时以空白字符分割；
+     2.输出的字段可以为字符串或数值，当前记录的字段（如$1）、变量或awk的表达式；数值先回转换成字符串然后输出
+     3.print命令后面的item可以省略，此时其功能相当于print $0,如果想输出空白，可以使用print ""
+
+eg:
+    awk -F: '{print $1,$NF}' /etc/passwd|column -t
+    tail -1 /etc/passwd|awk -F: 'BEGIN{OFS="#"}{print “hello”$1,$2}'
+```
+
+    2) printf
+
+```
+使用格式：
+    printf <format> item1,item2...
+
+要点：
+   1.其与print命令最大区别,printf 需要指定format,format必须给出
+   2.format用于指定后面的每个item输出格式
+   3.printf 语句不会自动打印换行字符:
+         format格式的指示符都以%开头，后跟一个字符:
+                                                  %c:显示ascall码
+                                                  %d:%i:十进制整数
+                                                  %e，%E：科学计数法
+                                                  %f:浮点数
+                                                  %s：字符串
+                                                  %u：无符号整数
+                                                  %%：显示%自身
+                                            修饰符：
+                                                  #[.#]:第一个#控制显示的宽度：第二个#表示小数点后的精度：
+                                                  %3.1f
+                                                  -:左对齐
+                                                  +：显示数组符号
+eg：
+    awk -F: '{printf "Username:%-15s,Uid:%d\n",$1,$3}' /etc/passwd
+```
+
+(9) 练习
 
 ```
 1) 统计/etc/fstab每个文件系统类型出现的次数
