--- a/04 文本三剑客.md
+++ b/04 文本三剑客.md
@@ -110,7 +110,7 @@ ens33     Link encap:Ethernet  HWaddr 00:0c:29:d5:65:bc
 
 ```
 语法规则：
-   sed [option] 'Addresscommand' [file]
+   sed [option] 'AddressCommandFlag' [file]
 
 option:
    -e<script>或--expression=<script> : 以选项中指定的script来处理输入的文本文件
@@ -120,7 +120,8 @@ option:
    -i（inside） : 直接修改文件内容，而不是输出到终端
                   如果不使用-i选项sed软件只是修改在内存中的数据，并不会影响磁盘上的文件
 
-地址定界:
+Address地址定界:用来表明该脚本命令作用到文本中的具体行
+
    1) startline,endline      # 从第几行到第几行
    2) /regular expression/   # 使用正则表达式
    3) /pattern1/,/pattern2/  # 第一次被pattern1匹配到的行开始，直到被pattern2匹配到的行结束
@@ -128,20 +129,36 @@ option:
    5) startline,+n           # 从startline开始，向后n行结束
    6) startline~step         # step步长，每隔step步
 
-命令操作:
+```
+[address]脚本命令
+
+或者
+
+address {
+    多个脚本命令
+}
+```
+
+Command命令操作:
    a[append] : 新增，a\string: 在制定或匹配到的行的下一行追加，内容为string
    i[insert] ：插入，i\string，而这些字串会在新的一行出现(目前的上一行)；  
    d[delete] : 删除, 删除符合条件的行
    c[change] ：取代，c 的后面可以接字串，这些字串可以取代 n1,n2 之间的行！
-   s ：替换，s/pattern/string/修饰符,查找并替换，默认只替换每行中第一次被模式匹配到的字符串
    p[print] : 显示,符合条件的行
    w ：把符合的行写入到指定文件中
+   s ：替换，s/pattern/string/修饰符,查找并替换，默认只替换每行中第一次被模式匹配到的字符串
    r ：整合不同的文件到一个文件
+   q : q 命令的作用是使 sed 命令在第一次匹配任务结束后，退出 sed 程序，不再进行对后续数据的处理
 
-修饰符：
+Flag修饰符：
+   
+   n: 1~512 之间的数字，表示指定要替换的字符串出现第几次时才进行替换，例如，一行中有 3 个 A，但用户只想替换第二个 A，这是就用到这个标记；
    g: 全局替换
    i: 忽略字符大小写
    !: 对指定行以外所有行应用命令
+   &: 用正则表达式匹配的内容进行替换
+   \n: 匹配第 n 个子串，该子串之前在 pattern 中用 \(\) 指定
+   \: 转义（转义替换部分包含：&、\ 等）
    
 匹配字符：
    ^ 匹配行开始，如：/^sed/匹配所有以sed开头的行。
@@ -160,20 +177,30 @@ option:
 
 示例：
 (1) 添加
+格式：
+    [address]a（或 i）\新文本内容
+
 sed '$a hello world' fstab		##在最后一行后添加字符串
 sed '$a hello\nworld' fstab		##在最后一行后添加字符串，使用换行符隔开
 sed '/^#/a hello world' fstab	     ##在以#开头的行后添加字符串
 
 (2) 删除
-sed 5d westos 			##删除第5行
-sed '/^#/d' fstab 		##把以#开头的行删除
-sed '/^UUID/!d' fstab 	##删除不是以UUID开头的所有行
-sed  '5,$d' westos		##删除第5行到最后一行
+格式：
+    [address]d           ##但使用该命令时要特别小心，如果你忘记指定具体行的话，文件中的所有内容都会被删除
 
-(3) 替换
-sed '/^#/c hello world' fstab	     ##将所有以#开头的行替换为指定字符串
+sed '/1/,/3/d' data6.txt   ##删除两个指定行(1-3)之间的所有行
+sed 5d westos 			  ##删除第5行
+sed '/^#/d' fstab 		  ##把以#开头的行删除
+sed '/^UUID/!d' fstab 	  ##删除不是以UUID开头的所有行
+sed  '5,$d' westos		  ##删除第5行到最后一行
+
+(3) 替换s
+格式：
+    [address]s/pattern/replacement/flags
+
 sed '5chello world' westos		##将第5行替换为指定字符串
-sed 's/is/ese/g' test               ##将is全部替换为ese
+sed 's/is/ese/g' test              ##将is全部替换为ese
+sed 's/\/bin\/bash/\/bin\/csh/' /etc/passwd    ##替换类似文件路径的字符串会比较麻烦，需要将路径中的正斜线进行转义
 
 (4) 显示
 sed -n 5p westos 		##显示第5行
@@ -187,6 +214,8 @@ sed -n '/^#/p' fstab 	##显示以#开头的行
 sed '/^#/w newfile' file  ##将以#开头的行都写入指定的newfile中
 sed '$r oldfile' newfile  ##将oldfile中的内容都整合如newfile的中,从最后一行开始放
 
+(6) q 退出脚本命令
+sed '/number 1/{ s/number 1/number 0/;q;}' test.txt  ##匹配到 number 1 时，将其替换成 number 0，然后直接退出
 ```
 
 > 文本三剑客之awk
